<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">ToDo</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="add">add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="setState">Specify the task mode</string>
    <string name="hint_text">Choose State</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="cuationTitle">This field should not be empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="user_name">User name</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="doRegister">Please register !</string>
    <string name="register">Register</string>
    <string name="Registered">You have already registered !!!</string>
    <string name="shouldNotEmpty">This field should not be empty</string>
    <string name="search">What are you looking for?</string>
</resources>